# hil-serl-pretrain

./: .gitignore  auto_encoder.py  data.py  data_utils.py  decoder.py  encoder.py  eval.py  load_data.py  load_params.py  main.py  params_utils.py  plot.py  pyproject.toml  self_decoder.py  test.py  train.py  view_data.py
scripts/: extract_data.py  view_data.py
