[project]
name = "pre-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.7",
    "jax[cuda12]>=0.6.2",
    "jaxlib>=0.6.2",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "optax>=0.2.6",
    "pyright>=1.1.407",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "tensorboard-plugin-profile>=2.21.3",
    "tensorflow-cpu>=2.20.0",
    "xprof>=2.21.3",
]
